--- a/style.css
+++ b/style.css
@@ -1,10 +1,58 @@
-p{
-	color: orange;
-	background-color: red;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family:Raleway,sans-serif;
 }
-	
-body{
-	color: blue;
-	background-color: black;
-		
+
+.hlavicka{
+    width: 100%;
+    height: 10%;
+    display: flex;
+    align-items: center;                                /*POZDEJI PRIDAT VICE EFEKTU PRI PREJTI A PRIDAT EFEKT PO VIDENI VISITED*/
+    justify-content: space-around;
+    position: fixed;
+    background-color: rgb(8, 8, 54);/*TMAVĚ MODRÁ BUDE PRO CELOU STRÁNKU*/
+    
 }
+
+a{
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    text-transform: uppercase;
+    font-size: 22px;
+}
+a:hover{
+    text-decoration: underline rgb(255, 255, 255);
+    position: relative;
+    
+}
+a:active{
+    color: rgb(255, 255, 255);
+    font-weight: bolder;
+}
+.pozadi{
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+}
+
+.image{
+    background-image: url(Pozadi\ uvodni\ stranky.jpg);
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    background-repeat: no-repeat;
+    filter: brightness(15%);
+    background-position: center;
+    background-size: cover; /*pri odzoomovani a zoomovani stranky se obrazek v pozadi nehybe */
+    
+}
+h1{
+    color: rgb(255, 255, 255);
+    text-align: center;
+}
+
+
+
