--- a/style.css
+++ b/style.css
@@ -1,58 +1,111 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    font-family:Raleway,sans-serif;
+    font-family: Montserrat,sans-serif;  /*FONT ktery bude pro CELOU stranku*/
 }
 
-.hlavicka{
+.pozadi{
     width: 100%;
-    height: 10%;
-    display: flex;
-    align-items: center;                                /*POZDEJI PRIDAT VICE EFEKTU PRI PREJTI A PRIDAT EFEKT PO VIDENI VISITED*/
-    justify-content: space-around;
-    position: fixed;
-    background-color: rgb(8, 8, 54);/*TMAVĚ MODRÁ BUDE PRO CELOU STRÁNKU*/
+    height: 100vh;
+    background-image: url(pozadi\ uvodni\ stranky.png);
+    background-position:center;
+    background-size: cover;  
     
 }
 
+.menu{
+    background-color:rgb(10, 10, 37);  /* tmave modra bude barva pro CELOU stranku*/
+    width: 100%;
+    margin: auto;
+    height: 12%;
+    color: rgb(255, 255, 255);
+    font-size:26px ;
+    display: flex;
+    align-items: center;
+    justify-content: space-around; 
+    
+}
 a{
     text-decoration: none;
     color: rgb(255, 255, 255);
-    text-transform: uppercase;
-    font-size: 22px;
-}
-a:hover{
-    text-decoration: underline rgb(255, 255, 255);
-    position: relative;
-    
-}
-a:active{
-    color: rgb(255, 255, 255);
-    font-weight: bolder;
-}
-.pozadi{
-    width: 100vw;
-    height: 100vh;
-    position: absolute;
 }
 
-.image{
-    background-image: url(Pozadi\ uvodni\ stranky.jpg);
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+                                /*EFEKT pro odkazy MENU */
+.menu ul li{
+    list-style: none;
+    display: inline-block;
+    margin: 50px;
+    position: relative;
+}
+.menu ul li a{
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    text-transform: uppercase;
+}
+.menu ul li::after{
+    content: "";
+    height: 2px;
+    width: 0;
+    background: rgb(255, 255, 255);
     position: absolute;
-    background-repeat: no-repeat;
-    filter: brightness(15%);
-    background-position: center;
-    background-size: cover; /*pri odzoomovani a zoomovani stranky se obrazek v pozadi nehybe */
+    left: 0 ;
+    bottom: -10px;
+    transition: 0.4s;
     
 }
-h1{
+.menu ul li:hover::after{
+    width: 100%;
     color: rgb(255, 255, 255);
-    text-align: center;
 }
+                            /*KONEC efektu pro MENU */
+
+
+
+.text{
+    color: rgb(255, 255, 255);
+    text-transform: uppercase;
+    text-align: center;
+    
+}
+.text h1{                                            /*INFO a TEXT na UVODNI strane*/
+    font-size: 40px;
+    position: absolute;
+    top: 42%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-weight: normal;
+}
+
+.tlacitko{
+    
+    width: 200px;
+    height: 50px;
+    font-size: 20px;
+    position: absolute;
+    top: 54%;                                       /*TLACITKO KTERE SMERUJE NA YTB VIDEO O F1 */
+    left: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(10, 10, 37);
+    margin: 10px;
+    transform: translate(-50%, -50%);
+    border-radius: 20px;
+    text-transform: uppercase;
+}
+
+
+
+    
+
+
+
+
+    
+
+
+
+
 
 
 
